--- a/style.css
+++ b/style.css
@@ -335,6 +335,27 @@
   border-radius: 50%;
 }
 
+#scroll10Btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: none;
+  background: #2f4247;
+  color: #fff;
+  font-size: 24px;
+  cursor: pointer;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+  transition: background 0.3s ease;
+}
+#scroll10Btn:hover {
+  background: #0a944d;
+}
+
+
 /* --- Mobile --- */
 @media (max-width: 1024px) {
   .modal-info-row {
@@ -378,6 +399,12 @@
   #pagination .dots {
     font-size: 48px;
   }
+
+  #scroll10Btn {
+  width: 128px;
+  height: 128px;
+  font-size: 48px;
+}
 }
 
 
@@ -393,3 +420,6 @@ body, #gallery {
   color: #eee;
   border-color: #444; /* viền tối hơn */
 }
+
+
+
